Add sample 404 error handling

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col">
             <h2>Welcome to my page!</h2>
-            <p class="lead">{{ content.message }}</p>
+            <p class="lead">Welcome to servelerss computing</p>
             <img src="{{ url_for('static', filename='images/logo.png') }} " alt="" height=80% widht=80%>
         </div>
     </div>
