--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -5,8 +5,8 @@
 <div class="container text-center">
     <div class="row">
         <div class="col">
-            <h1>404</h1>
-            <h3>Sorry, the page you tried cannot be found.</h3>
+            <h2>404</h2>
+            <p>Sorry, the page you tried cannot be found.</p>
         </div>
     </div>
 </div>
