--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,7 +23,7 @@
                 <a class="nav-link "nav-item {{ 'active' if active_page == 'home' else '' }}" aria-current="page" href="{{ url_for('home') }}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link "nav-item {{ 'active' if active_page == 'card' else '' }}" aria-current="page" href="{{ url_for('card') }}">Card</a>
+                <a class="nav-link "nav-item {{ 'active' if active_page == 'cards' else '' }}" aria-current="page" href="{{ url_for('cards') }}">Cards</a>
               </li>
             </ul>
           </div>
