Rename welcome string and add simple REST API response

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -5,8 +5,8 @@
 <div class="container text-center">
     <div class="row">
         <div class="col">
-            <h2>Welcome to my page!</h2>
-            <p class="lead">Welcome to servelerss computing</p>
+            <h2>Welcome Lambda</h2>
+            <p class="lead">Introduction to servelerss computing</p>
             <img src="{{ url_for('static', filename='images/logo.png') }} " alt="" height=80% widht=80%>
         </div>
     </div>
