Add and save new card

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>AWS Lambda FAQs</title>
+  <title>{% block title %}{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 
@@ -29,8 +29,18 @@
           </div>
         </div>
     </nav>
+    <div class="container text-center">
+      {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+          {% for type, content in messages %}
+            <div class="alert alert-{{ type }}" role="alert">
+              {{ content }}
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+    </div>
     {% block content %}{% endblock %}
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 
