--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% set active_page = 'card' %}
+{% block title %}Display Card{% endblock %}
 
 {% block content %}
 <div class="container text-center">
