--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% set active_page = 'home' %}
 
+{% block title %}AWS Lambda FAQs{% endblock %}
 {% block content %}
 <div class="container text-center">
     <div class="row">
